Fix filter icon alignment

--- a/src/app/core/components/notification-panel/style.scss
+++ b/src/app/core/components/notification-panel/style.scss
@@ -37,6 +37,7 @@
         margin-top: -4px;
 
         &.km-icon-filter {
+          margin-right: 0;
           margin-top: -1px;
         }
       }
